[package]
name = "pigeon-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = "0.41.0"
serde = { version = "1.0.131", features = ["derive"] }
log = "0.4.14"
bincode = "1.3.3"
futures = "0.3.18"